--- a/bookstore-frontend/.env
+++ b/bookstore-frontend/.env
@@ -1,2 +1,2 @@
-VITE_APP_URL=http://192.168.65.132:3000
-VITE_APP_IMAGE_URL=http://192.168.65.132:3080
+VITE_APP_URL=http://localhost:3000
+VITE_APP_IMAGE_URL=http://localhost:3080
